--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,82 @@
+html, body {
+    min-height: 100vh;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+
+}
+
 body {
     font-family: Arial, Helvetica, sans-serif;
     background-image: url(../img/padraocfc2020.jpeg);
     background-size: cover;
     margin: 0;
     font-size: 20px;
-
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
-.container {
-    margin: 0;
-    min-height: 100vh;
-    display: flex;
-    align-items: center;
+body {
+    display: grid;
+    grid-template-areas:
+    "header"
+    "main"
+    "footer";
+    grid-template-columns: 1fr;
+    /* Adiciona espaço para a navegação fixa */
+    padding-top: 60px; /* ajuste conforme a altura da nav */
+    grid-template-rows: auto 1fr auto; /* Define linhas: nav, conteúdo, footer */
+    row-gap: 2rem;
+}
+
+nav{
+    grid-area: header;
+}
+
+.container-body{
+    grid-area: main;
+}
+footer{
+    grid-area: footer;
+}
+
+.container-body{
+    display: grid;
+    grid-template-columns: 70% 1fr;
     justify-content: center;
-    align-items: flex-start;
+    align-self: flex-start;
+    justify-items: center;
 }
+
+nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    min-height: 60px;
+    /* padding: 0.5rem 0 0.8rem 0; */
+    background: #333;
+    display: flex;
+    /* flex-direction: row; */
+    /* justify-content: space-between; */
+    /* align-items: center; */
+    z-index: 1000;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+footer {
+    background-color: #333;
+    color: white;
+    text-align: center;
+    padding: 5px;
+    width: 100%;
+    margin-top: auto; /* Empurra o footer para baixo */
+    font-size: 15px;
+    font-family: monospace;
+}
+
 .duasBoxCospeConteudoFormulario{
     display: flex;
     flex-direction: column;
@@ -22,23 +84,17 @@ body {
     width: 450px;
 }
 
-.box {
+
+#formulariobasico{
+    display: flex;
+    flex-direction: row;
     color: white;
     background: #ffffff10;
     border: 2px solid #ffffff30;
     backdrop-filter: blur(200px);
     padding: 15px;
     border-radius: 15px;
-    min-width: 100vh;
-    max-width: 200vh;
-    margin: 8vh 10px 10px 10px;
-}
-
-
-#formulariobasico{
-    display: flex;
-    flex-direction: row;
-    
+    width: 70%;
 }
 
 .linhanoMeioDaPagina{
@@ -207,30 +263,6 @@ legend {
     margin-top: 10px;
     margin-bottom: 10px;
 }
-nav{
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-    border-bottom: 5px solid #ffffff30;
-    margin: 0px 0px 10px 0px;
-}
-
-footer{
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-    padding: 10px;
-    border-top: 5px solid #ffffff30;
-    margin: 10px 0px 0px 0px;
-}
-.flex-conteiner-footer{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
-    font-size: 15px;
-    font-family: monospace;
-}
 
 a {
     color: #007bff; /* Define a cor do link para azul (#007bff é o azul padrão do Bootstrap) */
@@ -240,14 +272,6 @@ a {
 a:hover {
     text-decoration: underline; /* Adiciona sublinhado quando o mouse passa por cima do link */
 }
-
-.conteinerNav{
-    display: flex;
-    align-items: center;
-    flex-direction: row;
-    justify-content: center;
-}
-
 
 .button{
     position:relative;
@@ -308,3 +332,9 @@ a:hover {
     border-radius: 5px;
 }
 
+
+@media screen and (max-width: 1500px){
+    .container-body{
+        grid-template-columns: 1fr;
+    }
+}
